# fire-ninja-bot

./: .gitignore  Cargo.toml  README.md  config.json.sample  scheme.sql  wrangler.toml.sample
src/: config.rs  db.rs  lib.rs  telegram.rs  utils.rs
