[package]
name = "fire-ninja-telegram-bot-cloudflare-worker"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
url = "2.5.0"
worker = "0.2.0"
proxy-scraper = { git = "https://github.com/zolagonano/proxy-scraper.git", rev = "657f608" , default_features = false, features = ["scraper"] }
reqwest = "0.12.3"

